@@ -18,7 +18,17 @@ this repository contains the full copyright notices and license terms. -->
     <field name="planned_date"/>
     <label name="effective_date"/>
     <field name="effective_date"/>
-    <field name="moves"  colspan="4"/>
+    <notebook colspan="4">
+        <page name="moves">
+            <field name="moves"  colspan="4"/>
+        </page>
+        <page string="Other Info" id="other">
+            <label name="assigned_by"/>
+            <field name="assigned_by"/>
+            <label name="done_by"/>
+            <field name="done_by"/>
+        </page>
+    </notebook>
     <label name="state"/>
     <field name="state"/>
     <group col="-1" colspan="2" id="buttons">
