@@ -1,3 +1,4 @@
+* Add employee on shipments for some states
 * Add request state on internal shipment
 * Manage same picking/storage and output location
 
